[package]
name = "account"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance/'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
rlp = { version = "0.4", default-features = false }
sha3 = { version = "0.8", default-features = false }
orml-utilities = {default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = '616e6858ec' }
primitives = { default-features = false, package = 'clover-primitives', path = '../../primitives', version = '0.9.0'}
ethereum = { version = "0.5.1", default-features = false, path ="../../modules/ethereum"}
clover-ethereum = { version = "0.9.0", default-features = false, path ="../../modules/clover-ethereum"}

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    'sp-std/std',
    'sp-io/std',
    "frame-support/std",
    "frame-system/std",
    'orml-utilities/std',
    'clover-ethereum/std',
    'sha3/std'
]
