[package]
name = "clover-claims"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://clover.finance'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { default-features = false, version = "1.0.101" }
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }

log = { version = "0.4.14", default-features = false }
type-utils = { path = "../type-utils" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0"  }
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
    "serde/std",
    "rustc-hex/std",
    "codec/std",
    "log/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]
