[package]
name = "clover-ethereum"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
codec = {default-features = false, package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
clover-evm = { version = "0.9.0", default-features = false, path = "../clover-evm" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
evm = { version = "0.19", features = ["with-codec"], default-features = false , path = "../evm"}
ethereum = { version = "0.5", default-features = false, features = ["with-codec"] , path = "../ethereum" }
ethereum-types = { version = "0.11.0", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
fp-consensus = { path = "../../primitives/consensus", default-features = false }
fp-rpc = { path = "../../primitives/rpc", default-features = false }
fp-evm = { default-features = false, path = "../../primitives/evm" }

[features]
default = ["std"]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"clover-evm/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"libsecp256k1/std",
	"evm/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-evm/std",
]
