[package]
name = "clover-evm"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
primitive-types = { version = "0.7.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.4", default-features = false }
evm = { version = "0.19", default-features = false, features = ["with-codec"], path = "../evm" }
evm-core = { version = "0.19", default-features = false, features = ["with-codec"], path = "../evm/core" }
evm-runtime = { version = "0.19", default-features = false, path = "../evm/runtime" }
evm-gasometer = { version = "0.19", default-features = false, path = "../evm/gasometer" }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.1"
ripemd160 = { version = "0.9", default-features = false }
fp-evm = { version = "0.9.0", default-features = false, path = "../../primitives/evm" }
hex-slice = { version = "0.1.4", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

[dev-dependencies]
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-core/std",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"ripemd160/std",
	"fp-evm/std",
]
