[package]
name = "pallet-eth-light"
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-std = {version = "2.0.0", default-features =false}
sp-runtime = {version = "2.0.0", default-features =false}
frame-support = {version = "2.0.0", default-features =false}
frame-system = {version = "2.0.0", default-features =false}
# eth
eth-primitives = {path = "../../primitives/eth", default-features = false}

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "eth-primitives/std",

]